// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader renders the component after receiving data 1`] = `
<Loader>
  <WrappedComponent
    some="data"
  >
    <div
      className="wrapped-component"
    />
  </WrappedComponent>
</Loader>
`;

exports[`Loader renders the spinner initially 1`] = `
<Loader>
  <div
    className="loading-spinner"
  />
</Loader>
`;
